# greenlit-takehome

./: README.md  pyproject.toml
App/: crud.py  database.py  main.py  models.py  schemas.py
