[tool.poetry]
name = "greenlit-takehome"
version = "0.1.0"
description = "Greenlit-takehome"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
unicorn = "^2.0.1.post1"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
